improve setup documents for DBFlute Intro way

--- a/web/ja/environment/setup/emecha.html
+++ b/web/ja/environment/setup/emecha.html
@@ -73,12 +73,11 @@
 	<h3 id="property">4. 特定環境適用プロパティ</h3>
 	<p>
 		最初の自動生成の前に考慮すべき特定の環境に適用するためのプロパティを設定して下さい。
-		<span class="frm">(ほとんどのケースで不要であると想定され、特殊な環境でなければ、もしくは、よくわからなければとりあえずスキップでもOK)</span>
 	</p>
 	<div class="detailpage"><a href="./firstprop.html">セットアップ - 特定環境適用プロパティ</a></div>
 	<h3 id="generate">5. クラスの自動生成</h3>
 	<p>
-		それでは、自動生成をしてみましょう。
+		それでは、自動生成 <span class="frm">(ReplaceSchema & Generate)</span> をしてみましょう。
 	</p>
 	<div class="detailpage"><a href="./generate.html">セットアップ - クラスの自動生成</a></div>
 	<h3 id="injection">6. DI環境の調整</h3>
