--- a/web/ja/environment/setup/injection.html
+++ b/web/ja/environment/setup/injection.html
@@ -115,7 +115,15 @@ Injector injector = Guice.createInjector(moduleList.toArray(<span class="keyword
 		Genreateタスクで自動生成されるDI設定クラス <em class="keyword">DBFluteModule</em>
 		を、アプリケーションでコンポーネントを初期化するときに、一緒にこのクラスを組み込みます。
 	</p>
-	<div class="relatedpage"><a href="../../manual/reference/diway/cide/index.html#diclass">CDI - DI設定クラス</a></div>
+	<div class="relatedpage"><a href="../../manual/reference/diway/cdi/index.html#diclass">CDI - DI設定クラス</a></div>
+
+	<h2 id="lasta">Lasta Di</h2>
+	<p>
+		Lasta Diの場合は、LastaFluteのExampleからプロジェクトのセットアップすることがほとんどで、Exampleにこういった設定が組み込まれているので明示的な設定は不要です。
+	</p>
+	<p>
+		<span class="frm">(app.xml にて、dbflute.xml を include します)</span>
+	</p>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
