--- a/web/ja/introduction/altodbflute.html
+++ b/web/ja/introduction/altodbflute.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="Content-Style-Type" content="text/css" />
 	<meta name="keywords" content="DBFlute,DB管理支援,開発運用,アルトフルート" />
 	<style type="text/css" title="currentStyle">@import "../../css/sub.css";</style>
-	<title>Alto DBFlute | DBFlute</title>
+	<title>Alto DBFluteスタイル | DBFlute</title>
 </head>
 <body>
 <div id="container" class="ct-manual">
@@ -24,10 +24,10 @@
 </div>
 
 <div id="content"><!-- __content-start__ -->
-	<h1>Alto DBFlute</h1>
+	<h1>Alto DBFluteスタイル</h1>
 	${indexlist}
 
-	<h2 id="overview">Alto DBFluteスタイル</h2>
+	<h2 id="overview">Alto DBFluteとは？</h2>
 	<p>
 		DBFluteには、アプリの外側で開発の <em class="keyword">ベース</em> を支える機能が多くあります。
 	</p>
