just fix: change link to ./byintro.html

--- a/web/ja/environment/setup/index.html
+++ b/web/ja/environment/setup/index.html
@@ -61,7 +61,7 @@
 	</p>
 	<div class="relatedpage"><a href="../supported.html">DBFluteのサポート情報</a></div>
 	<dl class="textlist">
-		<dt><a href="../../manual/function/generator/intro/index.html">DBFlute Intro で GUI からセットアップ</a> <span class="frm">※オーソドックス！</span></dt>
+		<dt><a href="./byintro.html">DBFlute Intro で GUI からセットアップ</a> <span class="frm">※オーソドックス！</span></dt>
 		<dd>
 			DBFlute Intro 起動して、画面から必要な情報を入力してDBFluteクライアントを作成します。
 		</dd>
