add SchemaPolicy to almost-true properties

--- a/web/ja/tutorial/architect.html
+++ b/web/ja/tutorial/architect.html
@@ -313,6 +313,12 @@
 				<div class="relatedpage"><a href="https://github.com/lastaflute/lastaflute-example-harbor/blob/master/dbflute_maihamadb/dfprop/conditionBeanMap.dfprop">lastaflute-example-harbor の conditionBeanMap.dfprop | Github</a></div>
 				<div class="relatedpage"><a href="../manual/reference/dfprop/includequery/index.html">conditionBeanMap.dfprop</a></div>
 			</dd>
+			<dt>SchemaPolicyの設定</dt>
+			<dd>
+				自分たちでDB設計するのであれば、ぜひ SchemaPolicyCheck しましょう。
+				<div class="relatedpage"><a href="../manual/function/genbafit/implfit/schemapolicy/index.html">DB設計のチェックスタイル (SchemaPolicyCheck)</a></div>
+				<div class="relatedpage"><a href="../manual/reference/dfprop/schemapolicy/index.html">schemaPolicyMap.dfprop</a></div>
+			</dd>
 		</dl>
 	</div>
 	<div class="inucolumn">
