--- a/web/ja/lastaflute/howto/upgrade/lachangelog.html
+++ b/web/ja/lastaflute/howto/upgrade/lachangelog.html
@@ -27,7 +27,18 @@
 	<h1>LastaFlute の ChangeLog</h1>
 	<div class="relatedpage"><a href="./index.html">LastaFluteのアップグレード</a></div>
 	${indexlist}
-
+<!--
+      <div class="release">
+        <h2>LastaFlute-1.2.4</h2>
+        <p class="releas5date">2022/xx/xx</p>
+        <div class="new">
+          <h3>NEW</h3>
+          <ul>
+            <li>[LastaMeta] add collectionFormat: multi to list parameter of form</li>
+          </ul>
+        </div>
+      </div>
+ -->
       <div class="release">
         <h2>LastaFlute-1.2.3</h2>
         <p class="releas5date">2021/12/17</p>
