improve sqlDirectory description (about source directory)

--- a/web/ja/manual/function/generator/task/sql2entity/index.html
+++ b/web/ja/manual/function/generator/task/sql2entity/index.html
@@ -91,6 +91,11 @@
 	</p>
 	<h4>読み込み対象のディレクトリ</h4>
 	<p>
+		ここで言うとディレクトリとは、ソースディレクトリ(Javaで言うclasspath対象のディレクトリ)を指します。
+		例えば、../src/main/java や ../src/main/resources のことです。
+		そのソースディレクトリ配下のサブディレクトリに関しては、パッケージという扱いとなります。
+	</p>
+	<p>
 		読み込み対象のディレクトリのルールは以下の通りです。
 	</p>
 	<dl class="textlist">
