improve test_updateMemberChangedToFormalized_排他制御例外が発生すること() description

--- a/web/ja/tutorial/handson/section08.html
+++ b/web/ja/tutorial/handson/section08.html
@@ -86,6 +86,7 @@
 		<dd>
 			<ul class="supplementlist">
 				<li>何かしらの方法で排他制御例外を発生させてみること</li>
+				<li>排他制御例外が発生することをアサート</li>
 				<li>排他制御例外の内容をログに出力して目視確認すること</li>
 			</ul>
 		</dd>
