feedback by miyazaki-kun thanks.

--- a/web/ja/tutorial/handson/section09.html
+++ b/web/ja/tutorial/handson/section09.html
@@ -171,7 +171,7 @@
 			</ul>
 		</dd>
 		<dd>
-			<span class="frm">※実装できたら、サービスポイント数が1以上というのを追加してみましょう。実行して落ちなければOKです。</span>
+			<span class="frm">※実装できたら、サービスポイント数が1以上という絞り込み条件を設定してみましょう。実行して落ちなければOKです。</span>
 		</dd>
 		<dd>
 			<span class="frm">※代理判定メソッドの UnitTest をやってみましょう。PartOfMemberPmb で (Eclipseなら) ctrl+9 でテストクラス作成(継承クラスはPlainTestCaseでOK)。
