write about "Thanks, Frameworks" for cron4j

--- a/web/ja/lastaflute/howto/architecture/jobscheduling.html
+++ b/web/ja/lastaflute/howto/architecture/jobscheduling.html
@@ -763,6 +763,15 @@ app
 	<p>
 		<a href="https://github.com/lastaflute/lastaflute-example-maihama">https://github.com/lastaflute/lastaflute-example-maihama.git</a>
 	</p>
+
+	<h2 id="thanksframeworks">Thanks, Frameworks</h2>
+	<p>
+		LastaJobは、内部的なスケジュール管理機能としてCron4jを使っています。
+		Cron4jがなければLastaJobを作ることはできなかったでしょう。とても感謝しています。ありがとうございます。
+	</p>
+	<p>
+		<a href="https://www.sauronsoftware.it/projects/cron4j/">https://www.sauronsoftware.it/projects/cron4j/</a>
+	</p>
 <!-- __content-end__ --></div></div>
 
 <div id="sidebar">
