fix: includeQueryMap.dfprop to conditionBeanMap.dfprop

--- a/web/ja/manual/function/ormapper/conditionbean/query/notequal.html
+++ b/web/ja/manual/function/ormapper/conditionbean/query/notequal.html
@@ -82,11 +82,11 @@ cb.query().<span class="point">setMemberId_NotEqual</span>(memberId);
 		<li>Date 全般 <span class="frm">(DateやTimestampなど)</span></li>
 	</ul>
 	<p>
-		Date 型に関しては、日付の非等値という条件が業務的に必要になることが少ないと考えられ、includeQueryMap.dfprop
-		のセットアップデフォルトでメソッドの生成が抑制されています。
+		Date 型に関しては、日付の非等値という条件が業務的に必要になることが少ないと考えられ、conditionBeanMap.dfprop
+		のセットアップデフォルトでメソッドの生成が抑制されています。<span class="frm">(コンパイルスピード向上のために)</span>
 	</p>
 	<div class="relatedpage"><a href="../../../../reference/dfprop/index.html#setupdefault">dfprop - セットアップデフォルト</a></div>
-	<div class="relatedpage"><a href="../../../../reference/dfprop/includequery/index.html">includeQueryMap.dfprop</a></div>
+	<div class="relatedpage"><a href="../../../../reference/dfprop/includequery/index.html">conditionBeanMap.dfprop</a></div>
 
 	<h2 id="classification">区分値メソッドの利用</h2>
 	<p>
