add <span class="frm">@since 1.2.6</span>

--- a/web/ja/manual/function/genbafit/projectfit/multipledb/index.html
+++ b/web/ja/manual/function/genbafit/projectfit/multipledb/index.html
@@ -308,7 +308,7 @@ xxx-project
 	</p>
 	<p>
 		dependencyInjectionMap.dfprop の isDBFluteModuleGuiceRuntimeComponentByName を true
-		にすることで、それらコンポーネントは byName でDI登録されます。
+		にすることで、それらコンポーネントは byName でDI登録されます。<span class="frm">@since 1.2.6</span>
 	</p>
 	<div class="relatedpage"><a href="../../../../reference/dfprop/dependencyinjection/index.html#isdbflutemoduleguiceruntimecomponentbyname">dfprop - isDBFluteModuleGuiceRuntimeComponentByName</a></div>
 	<p>
